// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="test title"
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="test title"
      useedit={false}
      visible={true}
      widget={null}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <Item__ItemView
          className="ui-item ui-listitem"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          style={Object {}}
        >
          <li
            className="ui-item ui-listitem Item__ItemView-iUFHZv dtkOyZ"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              theme={Object {}}
              title="test title"
              useedit={false}
              visible={true}
              widget={null}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "hoverColor": "#c0c0c0",
                  }
                }
              >
                <Title__TitleView
                  className="ui-title-bar ui-listitem"
                  layout={5}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                >
                  <div
                    className="ui-title-bar ui-listitem Title__TitleView-ddYmk gnejTR"
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                  >
                    <Title__StyledWidget
                      className="ui-title"
                      contentEditable={false}
                      direction="right"
                      disabled={true}
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      testing={true}
                      text="test title"
                      theme={Object {}}
                      title="test title"
                      useedit={false}
                      visible={true}
                      widget={null}
                      width=""
                      xcss={
                        Array [
                          "
	text-align: left;
	flex: 5;
",
                        ]
                      }
                    >
                      <Label
                        className="ui-title Title__StyledWidget-dupbKD dJeweB"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        theme={Object {}}
                        title="test title"
                        useedit={false}
                        visible={true}
                        widget={null}
                        width=""
                        xcss={
                          Array [
                            "
	text-align: left;
	flex: 5;
",
                          ]
                        }
                      >
                        <span
                          className="ui-label label normal ui-title Title__StyledWidget-dupbKD dJeweB disabled nohover"
                          contentEditable={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                          suppressContentEditableWarning={true}
                        >
                          test title
                        </span>
                      </Label>
                    </Title__StyledWidget>
                  </div>
                </Title__TitleView>
              </ThemeProvider>
            </Title>
          </li>
        </Item__ItemView>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="test title"
  useedit={false}
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="test title"
      useedit={false}
      visible={false}
      widget={null}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <Item__ItemView
          className="ui-item ui-listitem"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          style={Object {}}
        >
          <li
            className="ui-item ui-listitem Item__ItemView-iUFHZv dtkOyZ"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              theme={Object {}}
              title="test title"
              useedit={false}
              visible={false}
              widget={null}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "hoverColor": "#c0c0c0",
                  }
                }
              >
                <Title__TitleView
                  className="ui-title-bar ripple ui-listitem"
                  layout={5}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                >
                  <div
                    className="ui-title-bar ripple ui-listitem Title__TitleView-ddYmk gnejTR"
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                  >
                    <Title__StyledWidget
                      className="ui-title"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      testing={true}
                      text="test title"
                      theme={Object {}}
                      title="test title"
                      useedit={false}
                      visible={false}
                      widget={null}
                      width=""
                      xcss={
                        Array [
                          "
	text-align: left;
	flex: 5;
",
                        ]
                      }
                    >
                      <Label
                        className="ui-title Title__StyledWidget-dupbKD dJeweB"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        theme={Object {}}
                        title="test title"
                        useedit={false}
                        visible={false}
                        widget={null}
                        width=""
                        xcss={
                          Array [
                            "
	text-align: left;
	flex: 5;
",
                          ]
                        }
                      >
                        <span
                          className="ui-label label normal ui-title Title__StyledWidget-dupbKD dJeweB invisible"
                          contentEditable={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                          suppressContentEditableWarning={true}
                        >
                          test title
                        </span>
                      </Label>
                    </Title__StyledWidget>
                  </div>
                </Title__TitleView>
              </ThemeProvider>
            </Title>
          </li>
        </Item__ItemView>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 5,
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "title": "​",
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#c0c0c0",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={Object {}}
    title="test title left"
    useedit={false}
    visible={true}
    widget="test title right"
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#c0c0c0",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={Object {}}
    title="test title"
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;
